macros/tests/compile_fail/struct.rs
#![allow(unused)]

use latchlm_core::AiModel;
use latchlm_macros::AiModel;

#[derive(AiModel)]
struct Model;

fn main() {}
